<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.0.1</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.dependability</groupId>
	<artifactId>webapp</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>webapp</name>
	<description>Demo project for Spring Boot</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>17</java.version>
	</properties>
	
<dependencies>

    
    <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-webmvc</artifactId>
    </dependency>

    
    <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-test</artifactId>
        <scope>test</scope>
    </dependency>

    
    <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>3.14.0</version>
    </dependency>


	<dependency>
		<groupId>org.junit.platform</groupId>
		<artifactId>junit-platform-launcher</artifactId>
		<scope>test</scope>
	</dependency>

</dependencies>


	
	<build>
	<plugins>

		<plugin>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-maven-plugin</artifactId>
		</plugin>

		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-surefire-plugin</artifactId>
			<version>3.2.5</version>
		</plugin>

		
		<plugin>
			<groupId>org.pitest</groupId>
			<artifactId>pitest-maven</artifactId>
		<version>1.19.4</version> 

		
		<dependencies>
			<dependency>
				<groupId>org.pitest</groupId>
				<artifactId>pitest-junit5-plugin</artifactId>
				<version>1.2.3</version> 
			</dependency>
		</dependencies>

		<configuration>
			
			<javaExecutable>C:\Program Files\Eclipse Adoptium\jdk-21.0.9.10-hotspot\bin\java.exe</javaExecutable>

			<testPlugin>junit5</testPlugin>

			
			<targetClasses>
			<param>com.dependability.webapp.ReverseController*</param>
			</targetClasses>
			<targetTests>
			<param>com.dependability.webapp.*</param>
			</targetTests>

			<verbose>true</verbose>

			<jvmArgs>
			<jvmArg>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmArg>
			<jvmArg>--add-opens=java.base/java.util=ALL-UNNAMED</jvmArg>
			<jvmArg>--add-opens=java.base/java.io=ALL-UNNAMED</jvmArg>
			<jvmArg>--add-opens=java.base/java.lang.invoke=ALL-UNNAMED</jvmArg>
			</jvmArgs>

			<useClasspathJar>true</useClasspathJar>

			<timestampedReports>false</timestampedReports>

			<failWhenNoMutations>false</failWhenNoMutations>

			<threads>1</threads>
			<timeoutConstant>4000</timeoutConstant>

			<outputFormats>
			<param>HTML</param>
			<param>XML</param>
			</outputFormats>

			<excludedClasses>
			<param>com.dependability.webapp.WebappApplication*</param>
			</excludedClasses>
		</configuration>
		</plugin>


	</plugins>
	</build>



</project>
